--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -14,53 +14,55 @@
         <li data-target="#main-slide" data-slide-to="2"></li>
     </ol>
     <!--/ Indicators end-->
+    <div class="container">
+<!-- Carousel inner -->
+<div class="carousel-inner">
 
-    <!-- Carousel inner -->
-    <div class="carousel-inner">
-
-        <div class="item active" style="background:transparent">
-            <div class="slider-content">
-                <div class="col-md-12 text-left">
+    <div class="item active" style="background:transparent">
+        <div class="slider-content">
+            <div class="col-md-12 text-left">
+               
+                <h3 class="slide-sub-title ">Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+                <p>
+                    <a href="services.html" class="slider btn btn-primary border">Know More</a>
                    
-                    <h3 class="slide-sub-title ">Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
-                    <p>
-                        <a href="services.html" class="slider btn btn-primary border">Know More</a>
-                       
-                    </p>
-                </div>
+                </p>
             </div>
         </div>
-        <!--/ Carousel item 1 end -->
+    </div>
+    <!--/ Carousel item 1 end -->
 
-        <div class="item" style="background:transparent">
-            <div class="slider-content text-left">
-                <div class="col-md-12">
-                    
-                    
-                    <h3 class="slide-sub-title ">Lorem ipsum dolor aliquid earum quae delectus dolorum?</h3>
-                    <p class="">
-                        <a href="services.html" class="slider btn btn-primary border">Know More</a>
-                    </p>
-                </div>
+    <div class="item" style="background:transparent">
+        <div class="slider-content text-left">
+            <div class="col-md-12">
+                
+                
+                <h3 class="slide-sub-title ">Lorem ipsum dolor aliquid earum quae delectus dolorum?</h3>
+                <p class="">
+                    <a href="services.html" class="slider btn btn-primary border">Know More</a>
+                </p>
             </div>
         </div>
-        <!--/ Carousel item 2 end -->
+    </div>
+    <!--/ Carousel item 2 end -->
 
-        <div class="item" style="background:transparent">
-            <div class="slider-content text-left">
-                <div class="col-md-12">
-                    
-                    <!-- <h3 class="slide-title ">When Service Matters</h3> -->
-                    <h3 class="slide-sub-title ">Lorem ipsum dolor sit amet.</h3>
-                    <p class="">
-                        <a href="services.html" class="slider btn btn-primary border">Know More</a>
-                    </p>
-                </div>
+    <div class="item" style="background:transparent">
+        <div class="slider-content text-left">
+            <div class="col-md-12">
+                
+                <!-- <h3 class="slide-title ">When Service Matters</h3> -->
+                <h3 class="slide-sub-title ">Lorem ipsum dolor sit amet.</h3>
+                <p class="">
+                    <a href="services.html" class="slider btn btn-primary border">Know More</a>
+                </p>
             </div>
         </div>
-        <!--/ Carousel item 3 end -->
+    </div>
+    <!--/ Carousel item 3 end -->
 
-    </div><!-- Carousel inner end-->
+</div><!-- Carousel inner end-->
+    </div>
+    
 
     <!-- Controllers -->
     <a class="left carousel-control" href="#main-slide" data-slide="prev">
@@ -128,7 +130,7 @@
 
 
 <section id="project-area" class="project-area solid-bg">
-    <div class="container">
+    <div class="container-fluid">
         <div class="text-center">
             <h2 class="section-sub-title">Join Millions of Learners</h2>
             <h3 class="section-title">Get inspired. Showcase your skills. Learn from millions of community members.</h3>
@@ -138,7 +140,7 @@
         
             <div class="isotope-nav" data-isotope-nav="isotope">
                 <ul>
-                    <div class="row justify-content-center">
+                    <div class="row no-gutters justify-content-center">
                         <div class="col-lg-2 col-md-4 col-6 text-center">
                             <li><a href="#" class="active" data-filter="*">Show All</a></li>
                         </div>
@@ -786,7 +788,27 @@
                 <div class="col-lg-5">
                     <div class="">
                         <h2 class="medium-heading">Meet the best mentors in the world</h2>
-                        <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit aliquam quasi vitae laudantium asperiores nesciunt commodi expedita necessitatibus accusantium provident voluptatibus nemo aut officiis ipsam, minus animi similique possimus deserunt dolorem beatae. Earum necessitatibus odio esse nisi quae, accusamus veritatis cumque minima, eum omnis nulla unde ipsum cupiditate, eligendi quas!</p>
+                        <p class="mt-4">Fast, efficient, performant. Our powerful viewer embeds seamlessly everywhere.</p>
+                        <div class="list-item mt-1">
+                            <i class="icon fa fa-check"></i>
+                            <p>No plugin required</p>
+                        </div>
+                        <div class="list-item mt-1">
+                            <i class="icon fa fa-check"></i>
+                            <p> Cross-browser compatible</p>
+                        </div>
+                        <div class="list-item mt-1">
+                            <i class="icon fa fa-check"></i>
+                            <p> 3D Audio and annotation support</p>
+                        </div>
+                        <div class="list-item mt-1">
+                            <i class="icon fa fa-check"></i>
+                            <p> VR and AR Support</p>
+                        </div>
+                        <div class="list-item mt-1">
+                            <i class="icon fa fa-check"></i>
+                            <p> Mobile support</p>
+                        </div>
                         <div class="feature-btn">
                         <a class="btn btn-primary mt-4" href="">Learn More</a>
                         </div>
@@ -798,10 +820,10 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 order-lg-first">
                     <div class="">
-                        <h2 class="medium-heading">Best Courses to learn from</h2>
+                        <h2 class="medium-heading">3D Products in eCommerce</h2>
                         <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit aliquam quasi vitae laudantium asperiores nesciunt commodi expedita necessitatibus accusantium provident voluptatibus nemo aut officiis ipsam, minus animi similique possimus deserunt dolorem beatae. Earum necessitatibus odio esse nisi quae, accusamus veritatis cumque minima, eum omnis nulla unde ipsum cupiditate, eligendi quas!</p>
                         <div class="feature-btn">
-                        <a class="btn btn-primary mt-4" href="">Learn More</a>
+                        <a class="btn btn-primary mt-4" href="">Get in Touch</a>
                         </div>
                     </div>
                 </div>
@@ -823,8 +845,8 @@
                 </div>
                 <div class="col-lg-5">
                     <div class="">
-                        <h2 class="medium-heading">Meet the best mentors in the world</h2>
-                        <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit aliquam quasi vitae laudantium asperiores nesciunt commodi expedita necessitatibus accusantium provident voluptatibus nemo aut officiis ipsam, minus animi similique possimus deserunt dolorem beatae. Earum necessitatibus odio esse nisi quae, accusamus veritatis cumque minima, eum omnis nulla unde ipsum cupiditate, eligendi quas!</p>
+                        <h2 class="medium-heading">3D Products Configuraters</h2>
+                        <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit aliquam quasi vitae laudantium asperiores nesciunt commodi expedita necessitatibus accusantium provident voluptatibus nemo aut officiis ipsam, minus animi similique possimus deserunt dolorem beatae. Earum necessitatibus odio esse.</p>
                         <div class="feature-btn">
                             <a class="btn btn-primary mt-4" href="">Learn More</a>
                         </div>
