--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -38,7 +38,78 @@
     overflow: hidden;
     border-radius: 4px;
     cursor: pointer;
+    position: relative;
+
+    &-dialog{
+        background-color: #fff;
+        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+        padding: 2rem 3rem;
+        border-radius: 4px;
+        position: absolute;
+        width: 100%;
+        left: 102%;
+        z-index: 100;
+        top: 3%;
+        transform-origin: top left;
+        animation: zoom_in 0.5s forwards cubic-bezier(0.19, 1, 0.22, 1);
+        display: none;
+    
+        .title{
+            font-weight: 600;
+            font-size: 2.2rem;
+            letter-spacing: -0.04rem;
+            margin-bottom: 1.5rem;
+        }
+        .category{
+            padding:0 0.5rem;
+            border-radius: 2px;
+            background: #1caad9;
+            color: #fff;
+            font-weight: 600;
+            font-size: 1.2rem;
+        }
+        .date{
+            font-weight: 700;
+            font-size: 1.4rem;
+        }
+        .desc{
+            font-size: 1.2rem;
+            line-height: 1.4;
+            font-weight: 600;
+        }
+        .features{
+            i{
+                font-size: 1.2rem;
+                font-weight: 400;
+                margin-right: 0.5rem;
+            }
+            p{
+                font-size: 1.2rem;
+                font-weight: 500;
+            }
+        }
+    
+    }
+
+    &:hover{
+        & + .card-dialog{
+            display: block;
+        }
+    }
 }
+
+
+@keyframes zoom_in{
+    0%{
+        opacity: 0;
+        transform: scale(0);
+    }
+    100%{
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
 .project-area{
     padding-left: 2vw;
     padding-right: 2vw;
