added logo and card hiver effect updated

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -7,6 +7,17 @@
     }
 }
 
+.footer-logo{
+
+    text-align: center;
+    img{
+        width:75%;
+        max-width: 15rem;
+    } 
+  
+
+}
+
 .call-to-action-text{
     margin-bottom: 4rem;
     padding-bottom: 2rem;
