--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,15 +6,12 @@
         <div class="col-sm-12">
 
           <a routerLink="/" class="logo">
-            <h4 class="logo-img">
-              <i class="icofont-graduate mr-2"></i>
-              KnockItOff</h4>
+            <img src="assets/images/logo.png" class="logo-img"/>
           </a>
           <a routerLink="/" class="logo logo-mobile">
-            <h4 class="logo-img">
-              <i class="icofont-graduate mr-2"></i>
-              KnockItOff</h4>
+            <img src="assets/images/logo-mobile.png" class="logo-img" />
           </a>
+         
           <div class="site-nav-inner pull-left">
             <button
               type="button"
