--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,11 +9,14 @@
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-lg-3 col-md-12 col-sm-12 footer-widget footer-about">
-          <h3 class="widget-title">About Us</h3>
+
+          <div class="footer-logo">
+            <img src="assets/images/footer-logo.jpg" alt="">
+          </div>
+         
           <!-- <img class="footer-logo" src="assets/images/footer-logo.png" alt="" /> -->
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor inci done idunt ut labore et dolore magna aliqua.
+          <p class="text-center">
+            Lorem ipsum dolor sit amet, consectetur.
           </p>
         </div>
         <!-- Col end -->
